--- a/style.css
+++ b/style.css
@@ -6,3 +6,51 @@ body {
 #pic {
 	float: right;
 }
+
+#button {
+	margin-left: 40%;
+	margin-right: 40%;
+	background-color: #213862;
+
+	border-radius: 15px;
+	height: 100px;
+}
+
+#container {
+	width: 800px;
+	margin: 40px auto 60px;
+}
+
+#content-contact {
+	margin: 0 0 16px 0;
+	padding: 0 0 16px 0;
+	font-size: 38px;
+	font-weight: bold;
+	letter-spacing: -2px;
+	border-bottom: 1px solid #999;
+}
+
+#content-summarycontent {
+	margin: 0 0 16px 0;
+	padding: 0 0 32px 0;
+
+	font-style: italic;
+	font-size: 16px;
+}
+
+#content-professionalheader {
+	font-size: 24px;
+}
+
+.date {
+	float: right;
+}
+
+h3 {
+	border-bottom: 1px solid #999;
+}
+
+h4{
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
