--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
 	margin: 40px auto 60px;
 }
 
+img {
+	max-width: 100%;
+}
+
 #content-contact {
 	margin: 0 0 16px 0;
 	padding: 0 0 16px 0;
