--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
 
 #pic {
 	float: right;
+	width: 100px;
+	height: 70px;
 }
 
 #button {
@@ -19,10 +21,6 @@ body {
 #container {
 	width: 800px;
 	margin: 40px auto 60px;
-}
-
-img {
-	max-width: 100%;
 }
 
 #content-contact {
