--- a/style.css
+++ b/style.css
@@ -7,13 +7,8 @@ body {
 	float: right;
 }
 
-#button {
-	margin-left: 40%;
-	margin-right: 40%;
-	background-color: #213862;
-
-	border-radius: 15px;
-	height: 100px;
+.AlkireFront {
+  object-fit: contain;
 }
 
 #container {
