--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@ body {
 	background: url(clean.png);
 }
 
-#pic {
+#portrait {
 	float: right;
-	width: 200px;
-	height: auto
+	height: 80px;
+	width: 30px;
 }
 
 #container {
-	width: 200px;
-	height: auto
+	width: 288px;
+	height: 288px;
 	margin: 40px auto 60px;
 }
 
