--- a/style.css
+++ b/style.css
@@ -8,3 +8,37 @@ body {
 	height: 80px;
 	width: 30px;
 }
+
+#content-contact {
+	margin: 0 0 16px 0;
+	padding: 0 0 16px 0;
+	font-size: 38px;
+	font-weight: bold;
+	letter-spacing: -2px;
+	border-bottom: 1px solid #999;
+}
+
+#content-summarycontent {
+	margin: 0 0 16px 0;
+	padding: 0 0 32px 0;
+
+	font-style: italic;
+	font-size: 20px;
+}
+
+#content-professionalheader {
+	font-size: 24px;
+}
+
+.date {
+	float: right;
+}
+
+h3 {
+	border-bottom: 1px solid #999;
+}
+
+h4{
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
