--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@ body {
 
 #portrait {
 	float: right;
-	height: 80px;
-	width: 30px;
 }
+
+#container {
+	width: 80px;
+	margin: 40px auto 60px;
 
 #content-contact {
 	margin: 0 0 16px 0;
