--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
 }
 
 #container {
-	width: 80px;
-	height: auto;
+	max-width:100%;
+	max-height:100%;
 	margin: 40px auto 60px;
 
 #content-contact {
