--- a/style.css
+++ b/style.css
@@ -7,15 +7,24 @@ body {
 	float: right;
 }
 
+#button {
+	margin-left: 40%;
+	margin-right: 40%;
+	background-color: #213862;
+
+	border-radius: 15px;
+	height: 100px;
+}
+
 #container {
-	width: 80ox;
-	height: auto;
+	width: 800px;
 	margin: 40px auto 60px;
+}
 
 #content-contact {
 	margin: 0 0 16px 0;
 	padding: 0 0 16px 0;
-	font-size: 38px;
+	font-size: 42px;
 	font-weight: bold;
 	letter-spacing: -2px;
 	border-bottom: 1px solid #999;
@@ -30,7 +39,7 @@ body {
 }
 
 #content-professionalheader {
-	font-size: 24px;
+	font-size: 28px;
 }
 
 .date {
