--- a/style.css
+++ b/style.css
@@ -46,6 +46,16 @@ body {
 	float: right;
 }
 
+h1 {
+	font-size: 64px;
+	margin-bottom: -25px;
+}
+
+h2 {
+	font-size: 18px;
+	margin-bottom: -6px;
+}
+
 h3 {
 	border-bottom: 1px solid #999;
 }
@@ -53,4 +63,13 @@ h3 {
 h4{
 	margin-top: 0px;
 	margin-bottom: 0px;
+}
+
+li {
+	font-size: 18px;
+	text-align: left;
+}
+
+.block-date p {
+	font-size: 12px;
 }
