--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	font: 14px Tahoma, Sans-Serif;
-	background-image: url(abstract.png)
+	background-image: url(abstract.png);
 	background-repeat: no-repeat;
 	background-position: right top;
 	background-attachment: fixed;
