--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 body {
 	font: 14px Tahoma, Sans-Serif;
-	background-image: url(paint.png);
-	background-repeat: no-repeat;
-	background-position: right top;
-	background-attachment: fixed;
+	background-image: url(abstract.png);
 }
 
 #pic {
