--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ body {
 #container {
 	width: 800px;
 	margin: 40px auto 60px;
-	color: white;
-	/*setting alpha = 0.3*/
+	background: rgba(0, 19, 151, 0.1);
+	padding: 10px;
+	text-align:justify;
 }
 
 #content-contact {
